# stripe-payments-gateway

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
api/: __init__.py  main.py  routes.py  schemas.py
config/: __init__.py  settings.py
core/: __init__.py  idempotency.py  outbox.py  payment_processor.py  reconciliation.py  saga.py
database/: __init__.py  connection.py  models.py
database/migrations/: env.py
database/migrations/versions/: 001_initial_schema.py
integrations/: __init__.py  stripe_client.py  webhook_handler.py
monitoring/: __init__.py  health.py  logging.py  metrics.py
tests/: __init__.py  conftest.py  load_test.py  test_day1_core.py  test_health_routes.py  test_integration.py  test_payment_processor.py  test_race_conditions.py  test_refund_and_webhook_routes.py  test_webhook_handler.py
workers/: __init__.py  outbox_publisher.py  reconciliation_worker.py
